// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ClubFilterByStatus Default 1`] = `
Array [
  <button
    onClick={[Function]}
  >
    Active
  </button>,
  <button
    onClick={[Function]}
  >
    InActive
  </button>,
  <button
    onClick={[Function]}
  >
    All
  </button>,
  <ul>
    <li
      className=""
    >
      <a
        href="woking-fc"
      >
        Woking FC
      </a>
    </li>
    <li
      className="InActiveClub"
    >
      <a
        href="leyton-orient-fc"
      >
        Leyton Orient FC
      </a>
    </li>
    <li
      className=""
    >
      <a
        href="knaphill-fc"
      >
        Knaphill FC
      </a>
    </li>
  </ul>,
]
`;

exports[`Storyshots ClubFilterByStatus Empty 1`] = `
Array [
  <button
    onClick={[Function]}
  >
    Active
  </button>,
  <button
    onClick={[Function]}
  >
    InActive
  </button>,
  <button
    onClick={[Function]}
  >
    All
  </button>,
  <div
    className="list-items"
  >
    empty list
  </div>,
]
`;

exports[`Storyshots ClubLink Active Club 1`] = `
<li
  className=""
>
  <a
    href="woking-fc"
  >
    Woking FC
  </a>
</li>
`;

exports[`Storyshots ClubLink In Active Club 1`] = `
<li
  className="InActiveClub"
>
  <a
    href="leyton-orient-fc"
  >
    Leyton Orient FC
  </a>
</li>
`;

exports[`Storyshots ClubLinkList Default 1`] = `
<ul>
  <li
    className=""
  >
    <a
      href="woking-fc"
    >
      Woking FC
    </a>
  </li>
  <li
    className="InActiveClub"
  >
    <a
      href="leyton-orient-fc"
    >
      Leyton Orient FC
    </a>
  </li>
</ul>
`;

exports[`Storyshots ClubLinkList Empty 1`] = `
<div
  className="list-items"
>
  empty list
</div>
`;
